kubernetes/grafana/overlays/okd/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
    app.kubernetes.io/instance: grafana
spec:
  host: grafana.apps.okd.<path:secret/data/gitlab/domain#url>
  to:
    kind: Service
    name: grafana
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
