kubernetes/grafana/overlays/okd/egress-firewall.yaml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: grafana
spec:
  egress:
    # Control Plane
    - type: Allow
      to:
        dnsName: thanos-querier-openshift-monitoring.apps.okd.arthurvardevanyan.com
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
